XMLtoCSV/objects/unpackaged/objects/Question_vod__c.object
<CustomObject>
    <description>The object used to store question records that can be reused across multiple surveys.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only active questions will be available in the question bank.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Choice_vod__c</fullName>
        <description>Concatenated list of possible response values for multiselect picklists, picklists, and radio questions. Also includes response weight.  Response display order is implied.  Example: Yes; 20; Maybe; 10; No; 0;</description>
        <label>Answer Choices</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Language of the question.</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl_NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text_vod__c</fullName>
        <description>Question text.</description>
        <label>Question Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Question</label>
    <nameField>
        <displayFormat>Q{00000000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>Date_vod</fullName>
        <active>true</active>
        <description>Used for date questions.</description>
        <label>Date_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Datetime_vod</fullName>
        <active>true</active>
        <description>Used for datetime questions.</description>
        <label>Datetime_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decimal_vod</fullName>
        <active>true</active>
        <description>Used for Decimal/Currency questions.</description>
        <label>Decimal_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Description_vod</fullName>
        <active>true</active>
        <description>Used for description text.</description>
        <label>Description_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Long_Text_vod</fullName>
        <active>true</active>
        <description>Used for text questions where the answer is limited to 2,500 characters.</description>
        <label>Long_Text_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multiselect_vod</fullName>
        <active>true</active>
        <description>Used for multselect picklist type questions.</description>
        <label>Multiselect_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Number_vod</fullName>
        <active>true</active>
        <description>Used for number questions.</description>
        <label>Number_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picklist_vod</fullName>
        <active>true</active>
        <description>Used for picklist questions. Picklist and radio type questions both only allow a single answer choice, but picklist questions display in a dropdown box.</description>
        <label>Picklist_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Radio_vod</fullName>
        <active>true</active>
        <description>Used for radio questions.</description>
        <label>Radio_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Text_vod</fullName>
        <active>true</active>
        <description>Used for text questions where the answer is limited to 255 characters.</description>
        <label>Text_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>